Added transport table

--- a/src/js/widgets/RetrieveTransportTable/main.html
+++ b/src/js/widgets/RetrieveTransportTable/main.html
@@ -8,11 +8,8 @@
 			<tbody>
 				<tr>
 					<td class="airvis-pilot-number">#</td>
-					<td class="airvis-pilot-number">Id</td>
-					<td class="airvis-pilot-name">Pilot</td>
-                    <td class="airvis-pilot-country"></td>
+					<td class="airvis-pilot-name">Object</td>
 					<td class="airvis-pilot-sms">Sms</td>
-					<td class="airvis-pilot-person-id">Person Id</td>
 					<td class="airvis-pilot-dist-to-hq">Dist. to HQ, km</td>
 					<td class="airvis-pilot-speed">Ground spd</td>
 					<td class="airvis-pilot-last-update">Data age</td>
@@ -28,14 +25,8 @@
 				<tbody data-bind="foreach:tableUfos">
 					<tr data-bind="click:$parent.selectUfo.bind($parent,$data),css:{'airvis-selected':$parent.selectedUfo()?$parent.selectedUfo().personId()==personId():false}">
 						<td class="airvis-pilot-number" data-bind="text:$index()+1"></td>
-						<td class="airvis-pilot-number" data-bind="text:id"></td>
 						<td class="airvis-pilot-name" data-bind="text:name"></td>
-                        <td class="airvis-pilot-country">
-                            <span class="countryicon-sprite iconset-shiny" data-bind="css:'countrycode-'+country().toLowerCase()"></span>
-                            <span data-bind="text:country3"></span>
-                        </td>
 						<td class="airvis-pilot-sms"><div class="sms-box" data-bind="visible:newSmsCount()>0,text:newSmsCount"></div></td>
-						<td class="airvis-pilot-person-id" data-bind="text:personId"></td>
 						<td class="airvis-pilot-dist-to-hq">
 							<span data-bind="text:dist"></span>
 						</td>
