--- a/src/js/widgets/TrackerPageDebug/main.html
+++ b/src/js/widgets/TrackerPageDebug/main.html
@@ -31,7 +31,9 @@
 		<!-- ko widget: {data: retrieveTableWindow, type: 'Window'} -->
 			<!-- ko widget: { data: retrieveTable, type: 'RetrieveTable', modalWindow: retrieveTableWindow } --><!-- /ko -->
 		<!-- /ko -->
-
+        <!-- ko widget: {data: retrieveTransportTableWindow, type: 'Window'} -->
+            <!-- ko widget: { data: retrieveTransportTable, type: 'RetrieveTransportTable', modalWindow: retrieveTransportTableWindow } --><!-- /ko -->
+        <!-- /ko -->
 		<!-- ko widget: {data: retrieveRawFormWindow, type: 'Window'} -->
 			<!-- ko widget: { data: retrieveRawForm, type: 'RetrieveRawForm', modalWindow: retrieveRawFormWindow } --><!-- /ko -->
 		<!-- /ko -->
