alert replaced with console.warn

--- a/src/js/widgets/RetrieveRawForm/main.html
+++ b/src/js/widgets/RetrieveRawForm/main.html
@@ -12,5 +12,5 @@
 	</div>
 	<div class="airvis-sms-status" data-bind="visible:status()=='sending'">Sending SMS...<br><button data-bind="click:cancel">Cancel</button></div>
 	<div class="airvis-sms-status" data-bind="visible:status()=='success'">SMS sent<br><button data-bind="click:onemore">Send another SMS</button></div>
-	<div class="airvis-sms-status" data-bind="visible:status()=='error'">SMS wasn't send<br><button data-bind="click:onemore">Send another SMS</button></div>
+	<div class="airvis-sms-status" data-bind="visible:status()=='error'">SMS wasn't sent<br><button data-bind="click:onemore">Send another SMS</button></div>
 </div>
