--- a/src/js/widgets/RetrieveTable/main.html
+++ b/src/js/widgets/RetrieveTable/main.html
@@ -10,7 +10,7 @@
                     <td class="airvis-checkbox"><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></td>
 					<td class="airvis-pilot-number">#</td>
 					<td class="airvis-pilot-number">Id</td>
-					<td class="airvis-pilot-name">Pilot <input style="margin-left:20px;height:10px" type="text" data-bind="value:pilotNameFilter,valueUpdate: 'keydown'"></td>
+					<td class="airvis-pilot-name">Pilot <input id="pilot-filter-input" style="margin-left:20px;height:10px" type="text" data-bind="event:{keyup:filterPilots}"></td>
                     <td class="airvis-pilot-country"></td>
 					<td class="airvis-pilot-sms">Sms</td>
 					<!-- <td class="airvis-pilot-person-id">Person Id</td> -->
@@ -27,18 +27,18 @@
 		<div class="airvis-table-body viewport">
 			<table class="overview airvis-sms-table" cellspacing="0" cellpadding="0" border="0">
 				<tbody data-bind="foreach:tableUfos">
-					<tr data-bind="click:$parent.selectUfo.bind($parent,$data),css:{'airvis-selected':$parent.selectedUfo()?$parent.selectedUfo().personId()==personId():false},visible:name().toLowerCase().indexOf($parent.pilotNameFilter().toLowerCase())>-1">
+					<tr data-bind="css:{'airvis-selected':$parent.selectedUfo()?$parent.selectedUfo().personId()==personId():false},visible:$parent.filterPilot(name)">
                         <td class="airvis-checkbox" data-bind="click:function(t,event){event.stopPropagation()}">
                             <!-- ko widget: { data: visibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
                         </td>
 						<td class="airvis-pilot-number" data-bind="text:$index()+1"></td>
 						<td class="airvis-pilot-number" data-bind="text:id"></td>
-						<td class="airvis-pilot-name" data-bind="text:name"></td>
+						<td class="airvis-pilot-name" data-bind="text:name,click:$parent.onPilotClick.bind($parent,$data)"></td>
                         <td class="airvis-pilot-country">
                             <span class="countryicon-sprite iconset-shiny" data-bind="css:'countrycode-'+country().toLowerCase()"></span>
                             <span data-bind="text:country3"></span>
                         </td>
-						<td class="airvis-pilot-sms"><div class="sms-box" data-bind="visible:newSmsCount()>0,text:newSmsCount"></div></td>
+						<td class="airvis-pilot-sms" data-bind="click:$parent.selectUfo.bind($parent,$data)"><div class="sms-box" data-bind="visible:newSmsCount()>0,text:newSmsCount"></div></td>
 						<!-- <td class="airvis-pilot-person-id" data-bind="text:personId"></td>-->
 						<td class="airvis-pilot-dist-to-hq">
 							<span data-bind="text:dist"></span>
