--- a/src/js/widgets/RetrieveTable/main.html
+++ b/src/js/widgets/RetrieveTable/main.html
@@ -10,7 +10,7 @@
                     <td class="airvis-checkbox"><!-- ko widget: { data: allVisibleCheckbox, type: 'Checkbox'} --><!-- /ko --></td>
 					<td class="airvis-pilot-number">#</td>
 					<td class="airvis-pilot-number">Id</td>
-					<td class="airvis-pilot-name">Pilot <input id="pilot-filter-input" style="margin-left:20px;height:10px" type="text" data-bind="event:{keyup:filterPilots}"></td>
+					<td class="airvis-pilot-name">Pilot <input class="pilot-filter-input" type="text" data-bind="event:{keyup:filterPilots}"></td>
                     <td class="airvis-pilot-country"></td>
 					<td class="airvis-pilot-sms">Sms</td>
 					<!-- <td class="airvis-pilot-person-id">Person Id</td> -->
