--- a/src/js/widgets/RetrieveTable/main.html
+++ b/src/js/widgets/RetrieveTable/main.html
@@ -13,6 +13,7 @@
 					<td class="airvis-pilot-name">Pilot <input class="pilot-filter-input" type="text" data-bind="event:{keyup:filterPilots}"></td>
                     <td class="airvis-pilot-country"></td>
 					<td class="airvis-pilot-sms">Sms</td>
+					<td class="airvis-pilot-status">Status</td>
 					<!-- <td class="airvis-pilot-person-id">Person Id</td> -->
 					<td class="airvis-pilot-dist-to-hq">Dist. to HQ, km</td>
 					<td class="airvis-pilot-speed">Ground spd</td>
@@ -27,7 +28,7 @@
 		<div class="airvis-table-body viewport">
 			<table class="overview airvis-sms-table" cellspacing="0" cellpadding="0" border="0">
 				<tbody data-bind="foreach:tableUfos" >
-					<tr data-bind="css:{'airvis-selected':$parent.selectedUfo()?$parent.selectedUfo().personId()==personId():false},visible:$parent.filterPilot(name)">
+					<tr data-bind="css:{'airvis-selected':$parent.selectedUfo()?$parent.selectedUfo().personId()==personId():false,'picked-up':status()==2,'returned':status()==1},visible:$parent.filterPilot(name)">
                         <td class="airvis-checkbox" data-bind="click:function(t,event){event.stopPropagation()}">
                             <!-- ko widget: { data: visibleCheckbox, type: 'Checkbox'} --><!-- /ko -->
                         </td>
@@ -38,8 +39,9 @@
                             <span class="countryicon-sprite iconset-shiny" data-bind="css:'countrycode-'+country().toLowerCase()"></span>
                             <span data-bind="text:country3"></span>
                         </td>
-						<td class="airvis-pilot-sms" data-bind="click:$parent.selectUfo.bind($parent,$data),css:{'airvis-has-no-sms-from-org':!$parent.hasSmsFromOrg($data)}"><div class="sms-box" data-bind="visible:newSmsCount()>0,text:newSmsCount"></div></td>
-						<!-- <td class="airvis-pilot-person-id" data-bind="text:personId"></td>-->
+						<td class="airvis-pilot-sms" data-bind="click:$parent.selectUfo.bind($parent,$data)"><div class="sms-box" data-bind="css:{'unread-sms':newSmsCount()>0,'no-sms':smsData().length==0},text:smsCount"></div></td>
+                        <td class="airvis-pilot-status"><select data-bind="options:$parent.ufoStatuses,value:status,optionsText:'title',optionsValue:'weight',optionsCaption:'Select an item...',event:{change:$parent.sortTableRows.bind($parent)}"></select></td>
+                        <!-- <td class="airvis-pilot-person-id" data-bind="text:personId"></td>-->
 						<td class="airvis-pilot-dist-to-hq">
 							<span data-bind="text:dist"></span>
 						</td>
