--- a/src/js/widgets/RetrieveTransportTable/main.html
+++ b/src/js/widgets/RetrieveTransportTable/main.html
@@ -25,7 +25,7 @@
 				<tbody data-bind="foreach:tableUfos">
 					<tr data-bind="css:{'airvis-selected':$parent.selectedUfo()?$parent.selectedUfo().personId()==personId():false}">
 						<td class="airvis-pilot-number" data-bind="text:$index()+1"></td>
-						<td class="airvis-pilot-name" data-bind="text:name,click:$parent.onPilotClick.bind($parent,$data)"></td>
+						<td class="airvis-pilot-name" data-bind="text:name,click:$parent.onPilotClick.bind($parent)"></td>
 						<td class="airvis-pilot-sms"><div class="sms-box" data-bind="visible:newSmsCount()>0,text:newSmsCount"></div></td>
 						<td class="airvis-pilot-dist-to-hq">
 							<span data-bind="text:dist"></span>
