--- a/src/js/widgets/RetrieveTable/main.html
+++ b/src/js/widgets/RetrieveTable/main.html
@@ -3,6 +3,13 @@
 		<a href="#" class="airvis-window-ec-absolute" data-bind="click:switchState,css:{'airvis-pause':state()=='play','airvis-play':state()=='pause'}"></a>
 		<span class="airvis-window-ec-absolute-status" data-bind="visible:state()=='play',text:status"></span>
 	<!-- /ko -->
+    <div class="retrieve-ufo-table-statistic">
+        <span class="statistic-info">Returned pilots: <span data-bind="text:getPilotsByStatus(1).length + ' / ' + ufos().length"></span></span>
+        <span class="statistic-info">Pilots in the air: <span data-bind="text:getPilotsByStatus(3).length"></span></span>
+        <span class="statistic-info">Landed pilots: <span data-bind="text:getPilotsByStatus(4).length"></span></span>
+        <span class="statistic-info">SMS-Reported pilots: <span data-bind="text:ufos().filter(function(ufo){return ufo.smsData().length>0;}).length"></span></span>
+    </div>
+    <div class="retrieve-ufos-tables">
 	<div class="airvis-table-header-1">
 		<table cellspacing="0" cellpadding="0" border="0">
 			<tbody>
@@ -18,6 +25,7 @@
 					<td class="airvis-pilot-dist-to-hq">Dist. to HQ, km</td>
 					<td class="airvis-pilot-speed">Ground spd</td>
 					<td class="airvis-pilot-last-update">Data age</td>
+                    <td class="airvis-pilot-tracker-charge">Tracker charge, %</td>
 					<td class="airvis-pilot-tracker-name">Tracker</td>
 				</tr>
 			</tbody>
@@ -48,10 +56,12 @@
 						</td>
                         <td class="airvis-pilot-speed" data-bind="text:gSpd"></td>
                         <td class="airvis-pilot-last-update" data-bind="text:$parent.lastUpdateFormat(lastUpdate)"></td>
+                        <td class="airvis-pilot-tracker-charge" data-bind="text:trackerCharge"></td>
                         <td class="airvis-pilot-tracker-name" data-bind="text:trackerName"></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 	</div>
+    </div>
 </div>
