--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			var updateData = function() {
 				var ar = [];
 				for (var i = 0; i < pilots.length; i++) {
-					var rw = $.extend({last_update:"",tracker_name:pilots[i].tracker,alt:"",coords:"",dist:0,gspd:0, charge:'-'},pilots[i]);
+					var rw = $.extend({last_update:"",tracker_name:pilots[i].tracker,alt:"",coords:"",dist:0,gspd:0, charge:'-', url:""},pilots[i]);
 					var rwTr = trackers[rw.tracker];
 					if (rwTr) {
 						rw.tracker_name = rwTr.name;
@@ -111,6 +111,7 @@
                                 Proj4js.transform(sourceProjection, new Proj4js.Proj('EPSG:32635'), coordinate);
 
                                 rw.coords = "(" + rwTr.last_point[0] + "," + rwTr.last_point[1] + ") / ("+utmZone+"T " + coordinate.x.toFixed(0) + " " + coordinate.y.toFixed(0) + ")";
+                                rw.url = "https://maps.google.com/?q="+rwTr.last_point[0]+","+rwTr.last_point[1]+"&z=13";
                                 rw.gspd = rwTr.last_point[5] || 0;
                                 rw.gspd = Math.floor(rw.gspd*100)/100;
                                 rw.charge = rwTr.last_point[4];
@@ -177,7 +178,7 @@
 					<td class="num" data-bind="text:charge"></td>
 					<td data-bind="text:tracker_name"></td>
 					<td class="num" data-bind="text:alt"></td>
-					<td data-bind="text:coords"></td>
+					<td ><a target="_blank" data-bind="text:coords, attr:{href:url}"></a></td>
 					<td class="num" data-bind="text:gspd"></td>
 					<td class="num" data-bind="text:dist"></td>
 				</tr>
